that overflow fix broke enerything else. reverting.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@
 
 	body {
 		font-family: 'Lato', 'Helvetica Neue', Arial, sans-serif;
+		font-weight: 300;
 		color: #222122;
-		overflow: hidden;
 	}
 
 	h1 {
